--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
        function InsertLabel() {
           
           
-          var url = script_url+"&action=info";
+          var url = script_url+"?action=info";
 	  alert(url);
           $.getJSON(url, function (json) {
   	     slag1 = json.records.map(doc => Object.values(doc));
