--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 	        urlLink = slag[0][1];
                 alert("Đã kết nối với server thành công, mời bạn tra cứu CCCD");
                 var str = arr1[0];
-		alert(slag);
+		//alert(slag);
                 var timthay = str.indexOf("vitri=phuong");
 		    
                 if (timthay>-1) {
